Fix spacing of multiple emails

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -62,6 +62,8 @@ mat-sidenav-content {
 }
 
 .mat-expansion-panel {
+    margin-bottom: 0.2em;
+
     .content-header {
         align-items: center;
         display: flex;
